--- a/financial_schedule/templates/index.html
+++ b/financial_schedule/templates/index.html
@@ -8,6 +8,10 @@
     <title>Financial Scheduler</title>
 </head>
 <body>
+
+    <noscript>
+      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
     <div id="app"></div>
     {% render_bundle 'app' %}
 </body>
